--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcsh 'Science fiction'
 - !lcc 'PS'
 - !lcsh 'Short stories'
+- GITenberg
 title: Navy Day
 url: http://www.gutenberg.org/ebooks/30019
